--- a/client/app/modules/topic/templates/topic-details.tpl.html
+++ b/client/app/modules/topic/templates/topic-details.tpl.html
@@ -27,7 +27,7 @@
                 <br/>
                 <section class="row">
                     <span ng-repeat="file in myTopic.files">
-                        <i class="fa {{ file.class }} fa-2x icon-file" ng-click="showFileDetails($index)" style="display : inline-block" popover-trigger="mouseenter" popover-title="{{ file.filename }}" Popover-animation="true" popover="{{ file.ownerName }}"></i>
+                        <i class="fa {{ file.class }} fa-2x icon-file" ng-class="{ 'file-selected' : file.id == fileDetails.id  }" ng-click="showFileDetails($index)" style="display : inline-block" popover-trigger="mouseenter" popover-title="{{ file.filename }}" Popover-animation="true" popover="{{ file.ownerName }}"></i>
                     </span>
                 </section>
             </div>
@@ -57,14 +57,16 @@
             <div class="col-md-6 ">
                 <p ng-bind="fileDetails.description"></p>
                 <div class="btn-group">
-                    <button ng-href="{{ fileDetails.url }}" class="btn btn-default">Download</button>
-                    <button href="" class="btn btn-default">open in Google Docs</button>
+                    <a ng-href="{{ fileDetails.url }}" class="btn btn-default" target="_blank">Download</a>
+                    <!--<button href="" class="btn btn-default">open in Google Docs</button>-->
                 </div>
             </div>
             <div class="col-md-6">
+                {{ fileDetails.url }}
                 <img ng-src="{{ fileDetails.url }}" ng-if="isImage(fileDetails)"/>
                 <video ng-src="{{ fileDetails.url }}" ng-if="isVideo(fileDetails)"></video>
                 <pdf-js url="fileDetails.url" width="100%" height="400px" ng-if="isPdf(fileDetails)"></pdf-js>
+                <iframe ng-if="isOfficeDoc(fileDetails)" src="http://docs.google.com/gview?url={{ fileDetails.url }}&embedded=true" style="width:100%; height:500px;" frameborder="0"></iframe>
             </div>
         </section>
     </tab>
