--- a/client/app/styles/less/topic.less
+++ b/client/app/styles/less/topic.less
@@ -14,3 +14,23 @@
   border : 1.5px #828282 dashed;
   height : 300px;
 }
+
+.file-selected{
+  transform : scale(1.5);
+  -webkit-transform : scale(1.5);
+
+  text-shadow: 1px 1px 1px black;
+}
+
+.icon-file{
+  margin-right: 10px;
+  -webkit-transition: -webkit-transform 0.5s;
+  -moz-transition: -moz-transform 0.5s;
+  -ms-transition: -ms-transform 0.5s;
+  transition: transform 0.5s;
+  &:hover{
+    transform: scale(1.5);
+    -ms-transform: scale(1.5); /* IE 9 */
+    -webkit-transform: scale(1.5); /* Opera, Chrome, and Safari */
+  }
+}
