--- a/client/app/styles/main.css
+++ b/client/app/styles/main.css
@@ -14,20 +14,6 @@
 .member-topic {
   background: #e0ffda;
 }
-.icon-file {
-  margin-right: 10px;
-  -webkit-transition: -webkit-transform 0.5s;
-  -moz-transition: -moz-transform 0.5s;
-  -ms-transition: -ms-transform 0.5s;
-  transition: transform 0.5s;
-}
-.icon-file:hover {
-  transform: scale(1.5);
-  -ms-transform: scale(1.5);
-  /* IE 9 */
-  -webkit-transform: scale(1.5) rotate(360deg);
-  /* Opera, Chrome, and Safari */
-}
 .project-map .angular-google-map-container {
   height: 400px;
 }
@@ -405,6 +391,25 @@ body {
 .dropbox-dragover {
   border: 1.5px #828282 dashed;
   height: 300px;
+}
+.file-selected {
+  transform: scale(1.5);
+  -webkit-transform: scale(1.5);
+  text-shadow: 1px 1px 1px black;
+}
+.icon-file {
+  margin-right: 10px;
+  -webkit-transition: -webkit-transform 0.5s;
+  -moz-transition: -moz-transform 0.5s;
+  -ms-transition: -ms-transform 0.5s;
+  transition: transform 0.5s;
+}
+.icon-file:hover {
+  transform: scale(1.5);
+  -ms-transform: scale(1.5);
+  /* IE 9 */
+  -webkit-transform: scale(1.5);
+  /* Opera, Chrome, and Safari */
 }
 .node {
   stroke: #fff;
