--- a/client/app/styles/less/project.css
+++ b/client/app/styles/less/project.css
@@ -2,18 +2,10 @@
   height: 50px;
   overflow: auto;
 }
-.owner-topic {
-  background: #b2c9bc;
-}
-.follower-topic {
-  background: #faffc1;
-}
-.visitor-topic {
-  background: #fff4f4;
-}
-.member-topic {
-  background: #e0ffda;
-}
 .project-map .angular-google-map-container {
   height: 400px;
+}
+.project-panel {
+  height: 300px;
+  overflow: auto;
 }
