--- a/client/app/styles/less/topic.less
+++ b/client/app/styles/less/topic.less
@@ -1,3 +1,21 @@
+@import "variables";
+
+.owner-topic {
+  background: @ownerColor;
+}
+
+.follower-topic{
+  background: @followerColor;
+}
+
+.visitor-topic{
+  background: @visitorColor;
+}
+
+.member-topic{
+  background : @memberColor;
+}
+
 .dropbox{
   min-height : 70px;
   max-height : 300px;
