--- a/client/app/styles/less/project.less
+++ b/client/app/styles/less/project.less
@@ -1,30 +1,15 @@
-@import "variables";
-
 .thumb-project-brief{
   height : 50px;
   overflow :auto;
 }
 
-.owner-topic {
-  background: @ownerColor;
-}
-
-.follower-topic{
-  background: @followerColor;
-}
-
-.visitor-topic{
-  background: @visitorColor;
-}
-
-.member-topic{
-  background : @memberColor;
-}
-
-
-
 .project-map{
   .angular-google-map-container {
     height: 400px;
   }
+}
+
+.project-panel{
+  height : 300px;
+  overflow : auto;
 }
