--- a/client/app/styles/less/animate.less
+++ b/client/app/styles/less/animate.less
@@ -37,3 +37,17 @@
     animation : flipOutX 1s;
   }
 }
+
+.panel-animated{
+  border: none;
+  .panel-body{
+    &.ng-enter{
+      -webkit-animation: flipInX 0.5s;
+      animation : flipInX 0.5s;
+    }
+    &.ng-leave{
+      -webkit-animation: flipOutX 0.5s;
+      animation : flipOutX 0.5s;
+    }
+  }
+}
