--- a/client/app/styles/less/animate.css
+++ b/client/app/styles/less/animate.css
@@ -26,3 +26,14 @@
   -webkit-animation: flipOutX 1s;
   animation: flipOutX 1s;
 }
+.panel-animated {
+  border: none;
+}
+.panel-animated .panel-body.ng-enter {
+  -webkit-animation: flipInX 0.5s;
+  animation: flipInX 0.5s;
+}
+.panel-animated .panel-body.ng-leave {
+  -webkit-animation: flipOutX 0.5s;
+  animation: flipOutX 0.5s;
+}
