--- a/client/app/styles/main.css
+++ b/client/app/styles/main.css
@@ -1,3 +1,14 @@
+.btn-minus {
+  -webkit-transition: color 0.5s;
+  -moz-transition: color 0.5s;
+  -ms-transition: color 0.5s;
+  -o-transition: color 0.5s;
+  transition: color 0.2s;
+}
+.btn-minus:hover {
+  color: #a0a6a1;
+  text-shadow: 0 0 5px white;
+}
 .thumb-project-brief {
   height: 50px;
   overflow: auto;
@@ -39,6 +50,17 @@
 .tag-detail.ng-leave {
   -webkit-animation: flipOutX 1s;
   animation: flipOutX 1s;
+}
+.panel-animated {
+  border: none;
+}
+.panel-animated .panel-body.ng-enter {
+  -webkit-animation: flipInX 0.5s;
+  animation: flipInX 0.5s;
+}
+.panel-animated .panel-body.ng-leave {
+  -webkit-animation: flipOutX 0.5s;
+  animation: flipOutX 0.5s;
 }
 .profile-map {
   width: 200px;
