--- a/client/app/styles/less/common.css
+++ b/client/app/styles/less/common.css
@@ -50,3 +50,38 @@ footer p {
   right: 50px;
   z-index: 1;
 }
+.my-btn {
+  z-index: 20;
+  cursor: pointer;
+  position: absolute;
+  -webkit-transition: -webkit-transform 0.1s;
+  transition: transform 0.1s;
+}
+.my-btn.ng-enter {
+  -webkit-animation: fadeInDown 0.5s;
+  animation: fadeInDown 0.5s;
+}
+.my-btn:active {
+  transform: scale(1.5);
+  -webkit-transform: scale(1.5);
+}
+.my-btn.ng-leave {
+  visibility: hidden;
+}
+.my-btn.my-btn-first {
+  top: 50px;
+  right: 50px;
+}
+.my-btn.my-btn-second {
+  top: 50px;
+  right: 75px;
+}
+.my-btnmy-btn-picture {
+  top: 10px;
+  right: 10px;
+}
+.modal-tansparent {
+  background-color: transparent;
+  border: none;
+  box-shadow: none;
+}
