--- a/client/app/styles/main.css
+++ b/client/app/styles/main.css
@@ -62,6 +62,10 @@
   -webkit-animation: flipOutX 0.5s;
   animation: flipOutX 0.5s;
 }
+.edit-menu.ng-enter {
+  -webkit-animation: fadeInDown 0.5s;
+  animation: fadeInDown 0.5s;
+}
 .profile-map {
   width: 200px;
   height: 200px;
@@ -317,6 +321,41 @@ footer p {
   top: 50px;
   right: 50px;
   z-index: 1;
+}
+.my-btn {
+  z-index: 20;
+  cursor: pointer;
+  position: absolute;
+  -webkit-transition: -webkit-transform 0.1s;
+  transition: transform 0.1s;
+}
+.my-btn.ng-enter {
+  -webkit-animation: fadeInDown 0.5s;
+  animation: fadeInDown 0.5s;
+}
+.my-btn:active {
+  transform: scale(1.5);
+  -webkit-transform: scale(1.5);
+}
+.my-btn.ng-leave {
+  visibility: hidden;
+}
+.my-btn.my-btn-first {
+  top: 50px;
+  right: 50px;
+}
+.my-btn.my-btn-second {
+  top: 50px;
+  right: 75px;
+}
+.my-btnmy-btn-picture {
+  top: 10px;
+  right: 10px;
+}
+.modal-tansparent {
+  background-color: transparent;
+  border: none;
+  box-shadow: none;
 }
 /* general styles */
 html,
