refactoring grunt deploy to work well with tinymce plugins

--- a/client/app/modules/user/templates/profile.tpl.html
+++ b/client/app/modules/user/templates/profile.tpl.html
@@ -79,9 +79,9 @@
                         Unfollow
                     </button>
                 </div>
-                <a ui-sref="userSettings.basic({ uid : profile.id })" ng-show="isOwner" class="btn btn-default pull-right ">
-                    <i class="fa fa-edit"></i>{{'PROFILE_EDIT'|translate}}
-                </a>
+                <!--<a ui-sref="userSettings.basic({ uid : profile.id })" ng-show="isOwner" class="btn btn-default pull-right ">-->
+                    <!--<i class="fa fa-edit"></i>{{'PROFILE_EDIT'|translate}}-->
+                <!--</a>-->
                 <ul class="nav nav-tabs mbm">
                     <li ui-route="/user/{{ profile.id }}/activity" ng-class="{active: $uiRoute}" ng-show="isOwner">
                         <a ui-sref="profile.activity">
