--- a/client/app/modules/user/templates/settings/avatar.tpl.html
+++ b/client/app/modules/user/templates/settings/avatar.tpl.html
@@ -5,6 +5,7 @@
             data-shape="circle"
             data-step="imageCropStep"
             data-result="imageCropResult"
-            ng-show="showImageCropper">
+            ng-show="showImageCropper"
+            callback="myCallback(item)">
     </image-crop>
 </div>
