--- a/client/app/styles/less/common.less
+++ b/client/app/styles/less/common.less
@@ -80,16 +80,19 @@ footer{
     visibility: hidden;
   }
   &.my-btn-first{
-    top : 50px;
-    right: 50px;
+    top : 60px;
+    right: 40px;
   }
   &.my-btn-second{
-    top : 50px;
-    right: 75px;
+    top : 60px;
+    right: 10px;
   }
   &my-btn-picture{
     top : 10px;
     right: 10px;
+  }
+  &:hover{
+    color : #6c7e6d;
   }
 }
 
