--- a/client/app/modules/header/templates/header.tpl.html
+++ b/client/app/modules/header/templates/header.tpl.html
@@ -60,23 +60,21 @@
                     <li ng-show="me.profile.admin"><a ui-sref="challenges" >{{ 'ADMIN_SCREEN' | translate }}</a></li>
                     <li>
                         <a ui-sref="profile.activity({ uid : me.profile.id })" style="padding : 5px;">
-                            <img ng-if="me.profile.poster" ng-src="{{ me.profile.poster }}" height="50" tooltip-animation="true" tooltip="{{ me.profile.score }} point" tooltip-placement="bottom"/>
-                            <span ng-bind="me.profile.username"></span>
+                            <img ng-if="me.profile.poster" ng-src="{{ me.profile.poster }}" height="50" tooltip-animation="true" tooltip="{{ me.profile.username }} point" tooltip-placement="bottom"/>
+                            <img ng-if="!me.profile.poster" src="images/avater.jpg" height="50" tooltip-animation="true" tooltip="{{ me.profile.username }}" tooltip-placement="bottom"/>
                         </a>
                     </li>
-                    <li>
-                        <a href=""  ng-click="logout()"> {{ 'HEAD_LOGOUT' | translate }}</a>
+                    <li class="dropdown ">
+                        <a href="#" class="dropdown-toggle" data-toggle="dropdown">{{'HEAD_ACCOUNT'|translate}} <b class="caret"></b></a>
+                        <ul class="dropdown-menu">
+                            <li><a href="">Admin</a></li>
+                            <li><a ui-sref="userSettings.pass({ uid : me.profile.id })"  >{{ 'HEAD_SETTING' | translate }}</a></li>
+                            <li><a ng-href=""  ng-click="logout()"> {{ 'HEAD_LOGOUT' | translate }}</a></li>
+                        </ul>
                     </li>
-
                     <!--<li ui-route="/message/inbox" ng-class="{active:$uiRoute}" ><a ui-sref="message({ type : 'inbox' })">{{ 'HEAD_MESSAGE' | translate }} <span ng-show="unread" style="background:lightblue;color:white;" class="brm pas">{{unread}}</span></a>-->
                     <!--</li>-->
-                    <!--<li class="dropdown ">-->
-                        <!--<a href="#" class="dropdown-toggle" data-toggle="dropdown">{{'HEAD_ACCOUNT'|translate}} <b class="caret"></b></a>-->
-                        <!--<ul class="dropdown-menu">-->
-                            <!--<li><a ui-sref="userSettings">{{ 'HEAD_SETTING' | translate }}</a></li>-->
-                            <!--<li><a href=""  ng-click="logout()"> {{ 'HEAD_LOGOUT' | translate }}</a></li>-->
-                        <!--</ul>-->
-                    <!--</li>-->
+
                 </ul>
             </div>
         </div>
